~Disaccoppiati gli elementi grafici dalla classe Template